Corrige testes unitarios e aplica sugestoes do Copilot